:bug: fixing a small issue when viewing on mobile where the heading when wrapped would overlap.

--- a/src/app/xpros.css
+++ b/src/app/xpros.css
@@ -8,7 +8,7 @@
 .xpros-jumbo h1 span, .xpros-jumbo p span {
   background: rgba(0,0,0,0.5);
   color: white;
-  padding: 0px 10px 0px 10px;
+  padding: 2px 10px 2px 10px;
 }
 
 .xpros-header {
@@ -26,4 +26,11 @@
   margin: 0 auto;
   width: 100%;
   max-width: 1028px;
+}
+
+/* Media Queries */
+@media only screen and (max-width: 545px) {
+  .xpros-jumbo h1 span {
+    line-height:  70px;
+  }
 }
